--- a/myapp/templates/service.yml
+++ b/myapp/templates/service.yml
@@ -5,11 +5,10 @@ metadata:
   labels:
     {{- include "myapp.labels" . | nindent 4 }}
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
       protocol: TCP
-      nodePort: 30080
   selector:
     {{- include "myapp.selectorLabels" . | nindent 4 }}
